// Code generated with goa v3.7.0, DO NOT EDIT.
//
// InjectiveSpotExchangeRPC protocol buffer definition
//
// Command:
// $ goa gen github.com/InjectiveLabs/injective-indexer/api/design -o ../

syntax = "proto3";

package injective_spot_exchange_rpc;

option go_package = "/injective_spot_exchange_rpcpb";

// InjectiveSpotExchangeRPC defines gRPC API of Spot Exchange provider.
service InjectiveSpotExchangeRPC {
	// Get a list of Spot Markets
	rpc Markets (MarketsRequest) returns (MarketsResponse);
	// Get details of a single spot market
	rpc Market (MarketRequest) returns (MarketResponse);
	// Stream live updates of selected spot markets
	rpc StreamMarkets (StreamMarketsRequest) returns (stream StreamMarketsResponse);
	// Orderbook of a Spot Market
	rpc OrderbookV2 (OrderbookV2Request) returns (OrderbookV2Response);
	// Orderbook of Spot Markets
	rpc OrderbooksV2 (OrderbooksV2Request) returns (OrderbooksV2Response);
	// Stream live snapshot updates of selected spot market orderbook
	rpc StreamOrderbookV2 (StreamOrderbookV2Request) returns (stream StreamOrderbookV2Response);
	// Stream live level updates of selected spot market orderbook
	rpc StreamOrderbookUpdate (StreamOrderbookUpdateRequest) returns (stream StreamOrderbookUpdateResponse);
	// Orders of a Spot Market
	rpc Orders (OrdersRequest) returns (OrdersResponse);
	// Stream updates to individual orders of a Spot Market
	rpc StreamOrders (StreamOrdersRequest) returns (stream StreamOrdersResponse);
	// Trades of a Spot Market
	rpc Trades (TradesRequest) returns (TradesResponse);
	// Stream newly executed trades from Spot Market
	rpc StreamTrades (StreamTradesRequest) returns (stream StreamTradesResponse);
	// Trades of a Spot Market
	rpc TradesV2 (TradesV2Request) returns (TradesV2Response);
	// Stream newly executed trades from Spot Market
	rpc StreamTradesV2 (StreamTradesV2Request) returns (stream StreamTradesV2Response);
	// List orders posted from this subaccount
	rpc SubaccountOrdersList (SubaccountOrdersListRequest) returns (SubaccountOrdersListResponse);
	// List trades executed by this subaccount
	rpc SubaccountTradesList (SubaccountTradesListRequest) returns (SubaccountTradesListResponse);
	// Lists history orders posted from this subaccount
	rpc OrdersHistory (OrdersHistoryRequest) returns (OrdersHistoryResponse);
	// Stream updates to historical orders of a spot Market
	rpc StreamOrdersHistory (StreamOrdersHistoryRequest) returns (stream StreamOrdersHistoryResponse);
	// Get historical atomic swaps
	rpc AtomicSwapHistory (AtomicSwapHistoryRequest) returns (AtomicSwapHistoryResponse);
}

message MarketsRequest {
	// Filter by market status
	string market_status = 1;
	// Filter by the Coin denomination of the base currency
	string base_denom = 2;
	// Filter by the Coin denomination of the quote currency
	string quote_denom = 3;
	repeated string market_statuses = 4;
}

message MarketsResponse {
	// Spot Markets list
	repeated SpotMarketInfo markets = 1;
}

message SpotMarketInfo {
	// SpotMarket ID is keccak265(baseDenom || quoteDenom)
	string market_id = 1;
	// The status of the market
	string market_status = 2;
	// A name of the pair in format AAA/BBB, where AAA is base asset, BBB is quote
// asset.
	string ticker = 3;
	// Coin denom used for the base asset.
	string base_denom = 4;
	// Token metadata for base asset, only for Ethereum-based assets
	TokenMeta base_token_meta = 5;
	// Coin denom used for the quote asset.
	string quote_denom = 6;
	// Token metadata for quote asset, only for Ethereum-based assets
	TokenMeta quote_token_meta = 7;
	// Defines the fee percentage makers pay when trading (in quote asset)
	string maker_fee_rate = 8;
	// Defines the fee percentage takers pay when trading (in quote asset)
	string taker_fee_rate = 9;
	// Percentage of the transaction fee shared with the service provider
	string service_provider_fee = 10;
	// Defines the minimum required tick size for the order's price
	string min_price_tick_size = 11;
	// Defines the minimum required tick size for the order's quantity
	string min_quantity_tick_size = 12;
}

message TokenMeta {
	// Token full name
	string name = 1;
	// Token Ethereum contract address
	string address = 2;
	// Token symbol short name
	string symbol = 3;
	// URL to the logo image
	string logo = 4;
	// Token decimals
	sint32 decimals = 5;
	// Token metadata fetched timestamp in UNIX millis.
	sint64 updated_at = 6;
}

message MarketRequest {
	// MarketId of the market we want to fetch
	string market_id = 1;
}

message MarketResponse {
	// Info about particular spot market
	SpotMarketInfo market = 1;
}

message StreamMarketsRequest {
	// List of market IDs for updates streaming, empty means 'ALL' spot markets
	repeated string market_ids = 1;
}

message StreamMarketsResponse {
	// Info about particular spot market
	SpotMarketInfo market = 1;
	// Update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message OrderbookV2Request {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
}

message OrderbookV2Response {
	// Orderbook of a particular spot market
	SpotLimitOrderbookV2 orderbook = 1;
}

message SpotLimitOrderbookV2 {
	// Array of price levels for buys
	repeated PriceLevel buys = 1;
	// Array of price levels for sells
	repeated PriceLevel sells = 2;
	// market orderbook sequence
	uint64 sequence = 3;
	// Last update timestamp in UNIX millis.
	sint64 timestamp = 4;
}

message PriceLevel {
	// Price number of the price level.
	string price = 1;
	// Quantity of the price level.
	string quantity = 2;
	// Price level last updated timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message OrderbooksV2Request {
	// MarketIds of the markets
	repeated string market_ids = 1;
}

message OrderbooksV2Response {
	repeated SingleSpotLimitOrderbookV2 orderbooks = 1;
}

message SingleSpotLimitOrderbookV2 {
	// market's ID
	string market_id = 1;
	// Orderbook of the market
	SpotLimitOrderbookV2 orderbook = 2;
}

message StreamOrderbookV2Request {
	// List of market IDs for orderbook streaming, empty means 'ALL' spot markets
	repeated string market_ids = 1;
}

message StreamOrderbookV2Response {
	// Orderbook of a Spot Market
	SpotLimitOrderbookV2 orderbook = 1;
	// Order update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
	// MarketId of the market's orderbook
	string market_id = 4;
}

message StreamOrderbookUpdateRequest {
	// List of market IDs for orderbook streaming, empty means 'ALL' spot markets
	repeated string market_ids = 1;
}

message StreamOrderbookUpdateResponse {
	// Orderbook level updates of a Spot Market
	OrderbookLevelUpdates orderbook_level_updates = 1;
	// Order update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
	// MarketId of the market's orderbook
	string market_id = 4;
}

message OrderbookLevelUpdates {
	// market's ID
	string market_id = 1;
	// orderbook update sequence
	uint64 sequence = 2;
	// buy levels
	repeated PriceLevelUpdate buys = 3;
	// sell levels
	repeated PriceLevelUpdate sells = 4;
	// updates timestamp
	sint64 updated_at = 5;
}

message PriceLevelUpdate {
	// Price number of the price level.
	string price = 1;
	// Quantity of the price level.
	string quantity = 2;
	// Price level status.
	bool is_active = 3;
	// Price level last updated timestamp in UNIX millis.
	sint64 timestamp = 4;
}

message OrdersRequest {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Look for specific order side
	string order_side = 2;
	// Look for specific subaccountId of an order
	string subaccount_id = 3;
	// Skip will skip the first n item from the result
	uint64 skip = 4;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 5;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 6;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 7;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 8;
	// Should include inactive orders
	bool include_inactive = 9;
	// Choose to return subaccount total orders
	bool subaccount_total_orders = 10;
	// TradeId of the order we want to fetch
	string trade_id = 11;
	// Client order ID
	string cid = 12;
}

message OrdersResponse {
	repeated SpotLimitOrder orders = 1;
	Paging paging = 2;
}

message SpotLimitOrder {
	// Hash of the order
	string order_hash = 1;
	// The side of the order
	string order_side = 2;
	// Spot Market ID is keccak265(baseDenom + quoteDenom)
	string market_id = 3;
	// The subaccountId that this order belongs to
	string subaccount_id = 4;
	// Price of the order
	string price = 5;
	// Quantity of the order
	string quantity = 6;
	// The amount of the quantity remaining unfilled
	string unfilled_quantity = 7;
	// Trigger price is the trigger price used by stop/take orders. 0 if the
// trigger price is not set.
	string trigger_price = 8;
	// Fee recipient address
	string fee_recipient = 9;
	// Order state
	string state = 10;
	// Order committed timestamp in UNIX millis.
	sint64 created_at = 11;
	// Order updated timestamp in UNIX millis.
	sint64 updated_at = 12;
	// Transaction Hash where order is created. Not all orders have this field
	string tx_hash = 13;
	// Custom client order ID
	string cid = 14;
}
// Paging defines the structure for required params for handling pagination
message Paging {
	// total number of txs saved in database
	sint64 total = 1;
	// can be either block height or index num
	sint32 from = 2;
	// can be either block height or index num
	sint32 to = 3;
	// count entries by subaccount, serving some places on helix
	sint64 count_by_subaccount = 4;
	// array of tokens to navigate to the next pages
	repeated string next = 5;
}

message StreamOrdersRequest {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Look for specific order side
	string order_side = 2;
	// Look for specific subaccountId of an order
	string subaccount_id = 3;
	// Skip will skip the first n item from the result
	uint64 skip = 4;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 5;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 6;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 7;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 8;
	// Should include inactive orders
	bool include_inactive = 9;
	// Choose to return subaccount total orders
	bool subaccount_total_orders = 10;
	// TradeId of the order we want to fetch
	string trade_id = 11;
	// Client order ID
	string cid = 12;
}

message StreamOrdersResponse {
	// Updated market order
	SpotLimitOrder order = 1;
	// Order update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message TradesRequest {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Filter by execution side of the trade
	string execution_side = 2;
	// Filter by direction the trade
	string direction = 3;
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 4;
	// Skip will skip the first n item from the item result
	uint64 skip = 5;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 6;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 7;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 8;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 9;
	// Subaccount ids of traders we want to get trades
	repeated string subaccount_ids = 10;
	repeated string execution_types = 11;
	// Filter by the tradeId of the trade
	string trade_id = 12;
	// Account address
	string account_address = 13;
	// Client order ID
	string cid = 14;
}

message TradesResponse {
	// Trades of a Spot Market
	repeated SpotTrade trades = 1;
	// Paging indicates pages response is on
	Paging paging = 2;
}

message SpotTrade {
	// Maker order hash.
	string order_hash = 1;
	// The subaccountId that executed the trade
	string subaccount_id = 2;
	// The ID of the market that this trade is in
	string market_id = 3;
	// The execution type of the trade
	string trade_execution_type = 4;
	// The direction the trade
	string trade_direction = 5;
	// Price level at which trade has been executed
	PriceLevel price = 6;
	// The fee associated with the trade (quote asset denom)
	string fee = 7;
	// Timestamp of trade execution in UNIX millis
	sint64 executed_at = 8;
	// Fee recipient address
	string fee_recipient = 9;
	// A unique string that helps differentiate between trades
	string trade_id = 10;
	// Trade's execution side, marker/taker
	string execution_side = 11;
	// Custom client order ID
	string cid = 12;
}

message StreamTradesRequest {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Filter by execution side of the trade
	string execution_side = 2;
	// Filter by direction the trade
	string direction = 3;
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 4;
	// Skip will skip the first n item from the item result
	uint64 skip = 5;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 6;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 7;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 8;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 9;
	// Subaccount ids of traders we want to get trades
	repeated string subaccount_ids = 10;
	repeated string execution_types = 11;
	// Filter by the tradeId of the trade
	string trade_id = 12;
	// Account address
	string account_address = 13;
	// Client order ID
	string cid = 14;
}

message StreamTradesResponse {
	// New spot market trade
	SpotTrade trade = 1;
	// Executed trades update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message TradesV2Request {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Filter by execution side of the trade
	string execution_side = 2;
	// Filter by direction the trade
	string direction = 3;
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 4;
	// Skip will skip the first n item from the item result
	uint64 skip = 5;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 6;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 7;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 8;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 9;
	// Subaccount ids of traders we want to get trades
	repeated string subaccount_ids = 10;
	repeated string execution_types = 11;
	// Filter by the tradeId of the trade
	string trade_id = 12;
	// Account address
	string account_address = 13;
	// Client order ID
	string cid = 14;
}

message TradesV2Response {
	// Trades of a Spot Market
	repeated SpotTrade trades = 1;
	// Paging indicates pages response is on
	Paging paging = 2;
}

message StreamTradesV2Request {
	// MarketId of the market's orderbook we want to fetch
	string market_id = 1;
	// Filter by execution side of the trade
	string execution_side = 2;
	// Filter by direction the trade
	string direction = 3;
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 4;
	// Skip will skip the first n item from the item result
	uint64 skip = 5;
	// Limit is used to specify the maximum number of items to be returned.
	sint32 limit = 6;
	// The starting timestamp in UNIX milliseconds that the trades must be equal or
// older than
	sint64 start_time = 7;
	// The ending timestamp in UNIX milliseconds that the trades must be equal or
// younger than
	sint64 end_time = 8;
	// MarketIds of the markets of which we want to get trades
	repeated string market_ids = 9;
	// Subaccount ids of traders we want to get trades
	repeated string subaccount_ids = 10;
	repeated string execution_types = 11;
	// Filter by the tradeId of the trade
	string trade_id = 12;
	// Account address
	string account_address = 13;
	// Client order ID
	string cid = 14;
}

message StreamTradesV2Response {
	// New spot market trade
	SpotTrade trade = 1;
	// Executed trades update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message SubaccountOrdersListRequest {
	// subaccount ID to filter orders for specific subaccount
	string subaccount_id = 1;
	// Market ID to filter orders for specific market
	string market_id = 2;
	// Skip will skip the first n item from the result
	uint64 skip = 3;
	// Limit is used to specify the maximum number of items to be returned
	sint32 limit = 4;
}

message SubaccountOrdersListResponse {
	repeated SpotLimitOrder orders = 1;
	Paging paging = 2;
}

message SubaccountTradesListRequest {
	// SubaccountId of the trader we want to get the trades from
	string subaccount_id = 1;
	// Filter trades by market ID
	string market_id = 2;
	// Filter by execution type of trades
	string execution_type = 3;
	// Filter by direction trades
	string direction = 4;
	// Skip will skip the first n item from the result
	uint64 skip = 5;
	// Limit is used to specify the maximum number of items to be returned
	sint32 limit = 6;
}

message SubaccountTradesListResponse {
	// List of spot market trades
	repeated SpotTrade trades = 1;
}

message OrdersHistoryRequest {
	// subaccount ID to filter orders for specific subaccount
	string subaccount_id = 1;
	// Market ID to filter orders for specific market
	string market_id = 2;
	// Skip will skip the first n item from the result
	uint64 skip = 3;
	// Limit is used to specify the maximum number of items to be returned
	sint32 limit = 4;
	// filter by order types
	repeated string order_types = 5;
	// order side filter
	string direction = 6;
	// Search for orders which createdAt >= startTime, time in millisecond
	sint64 start_time = 7;
	// Search for orders which createdAt <= endTime, time in millisecond
	sint64 end_time = 8;
	// Filter by order state
	string state = 9;
	repeated string execution_types = 10;
	repeated string market_ids = 11;
	// TradeId of the order we want to fetch
	string trade_id = 12;
	// Return only orders for active markets
	bool active_markets_only = 13;
	// Client order ID
	string cid = 14;
}

message OrdersHistoryResponse {
	// List of history spot orders
	repeated SpotOrderHistory orders = 1;
	Paging paging = 2;
}

message SpotOrderHistory {
	// Hash of the order
	string order_hash = 1;
	// Spot Market ID is keccak265(baseDenom + quoteDenom)
	string market_id = 2;
	// active state of the order
	bool is_active = 3;
	// The subaccountId that this order belongs to
	string subaccount_id = 4;
	// The execution type
	string execution_type = 5;
	// The side of the order
	string order_type = 6;
	// Price of the order
	string price = 7;
	// Trigger price
	string trigger_price = 8;
	// Quantity of the order
	string quantity = 9;
	// Filled amount
	string filled_quantity = 10;
	// Order state
	string state = 11;
	// Order committed timestamp in UNIX millis.
	sint64 created_at = 12;
	// Order updated timestamp in UNIX millis.
	sint64 updated_at = 13;
	// Order direction (order side)
	string direction = 14;
	// Transaction Hash where order is created. Not all orders have this field
	string tx_hash = 15;
	// Custom client order ID
	string cid = 16;
}

message StreamOrdersHistoryRequest {
	// subaccount ID to filter orders for specific subaccount
	string subaccount_id = 1;
	// Market ID to filter orders for specific market
	string market_id = 2;
	// filter by order types
	repeated string order_types = 3;
	// order side filter
	string direction = 4;
	// Filter by order state
	string state = 5;
	repeated string execution_types = 6;
}

message StreamOrdersHistoryResponse {
	// Updated order
	SpotOrderHistory order = 1;
	// Order update type
	string operation_type = 2;
	// Operation timestamp in UNIX millis.
	sint64 timestamp = 3;
}

message AtomicSwapHistoryRequest {
	// sender of the atomic swap
	string address = 1;
	// atomic swap contract address to filter
	string contract_address = 2;
	// skip some swaps
	sint32 skip = 3;
	// limit number of swaps returned by this API
	sint32 limit = 4;
	// lowerbound of atomic swap index
	sint32 from_number = 5;
	// upperbound of atomic swap index
	sint32 to_number = 6;
}

message AtomicSwapHistoryResponse {
	// Paging indicates total number of records with this filter
	Paging paging = 1;
	// swap data
	repeated AtomicSwap data = 2;
}

message AtomicSwap {
	// executor of the swap
	string sender = 1;
	// swap route
	string route = 2;
	// source coin
	Coin source_coin = 3;
	// destination received coin
	Coin dest_coin = 4;
	// fees of each steps in route
	repeated Coin fees = 5;
	// contract address that executes to make this swap
	string contract_address = 6;
	// Numerical index by sender to use in pagination from_number and to_number
	sint32 index_by_sender = 7;
	// Numerical index by sender + acontract to use in pagination from_number and
// to_number, that support contract filter
	sint32 index_by_sender_contract = 8;
	// transaction hash of the swap
	string tx_hash = 9;
	// transaction timestamp of the swap
	sint64 executed_at = 10;
	// Refunded amount of the swap
	string refund_amount = 11;
}

message Coin {
	// Denom of the coin
	string denom = 1;
	string amount = 2;
}
